<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/page_margin"
        android:layout_marginRight="@dimen/page_margin"
        android:orientation="vertical"
        android:paddingTop="@dimen/page_margin"
        tools:context=".MainActivity">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/labelTextSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_your_full_name"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="@dimen/labelTextSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:autofillHints=""
            android:hint="@string/enter_home_address"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profession"
            android:textColor="@color/black"
            android:textSize="@dimen/labelTextSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/occupation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:autofillHints=""
            android:hint="@string/enter_your_occupation"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/dream_job"
            android:textColor="@color/black"
            android:textSize="@dimen/labelTextSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/dream_job"
            android:autofillHints=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_your_dream_job"
            android:inputType="textPersonName" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favourite_food"
            android:textColor="@color/black"
            android:textSize="@dimen/labelTextSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/favourite"
            android:autofillHints=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/what_is_your_favourite_food"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSubmit"
            android:layout_marginTop="20dp"
            android:text="@string/submit" />


    </LinearLayout>
</ScrollView>